# network-security-foundation-lab

./: .gitignore  01_START_HERE.md  02_RUN_FIRST_ON_PHONE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt  validate_repo.sh
.github/workflows/: ci.yml  lint.yml
configs/: suricata_lab.env.example  triage_rules.yaml
course-completion/: CODE_EXPLANATIONS.md  FULL_NOTES.md  INCIDENT_ANSWERS.md  LAB_WALKTHROUGHS.md  SKILL_MAP.md
datasets/suricata/: eve_sample.jsonl
docs/: CORE_CONCEPTS.md  CV_READY_SUMMARY.md  LESSON_EXECUTION_COMPANION.md  LESSON_RESEARCH_ANALYSIS_COMPANION.md  OFFLINE_INDEX.md  PORTFOLIO_SKILL_MAPPING.md  PROJECT_MANUAL.md  README.md  REPOSITORY_STATUS_REPORT.md
docs/crypto_and_tls/: 01_START_HERE.md  tls_operational_security.md
docs/detection_engineering/: 01_START_HERE.md  suricata_detection_tuning_framework.md
docs/foundations/: 01_START_HERE.md  network_security_fundamentals.md
docs/network_forensics/: 01_START_HERE.md  network_forensics_workflow.md
docs/protocol_security/: 01_START_HERE.md  protocol_abuse_patterns.md
docs/research_methods/: 01_START_HERE.md  experimental_design_for_detection_labs.md
docs/zero_trust/: 01_START_HERE.md  segmentation_and_policy_verification.md
incidents/: 01_START_HERE.md
incidents/tickets/: INC-001_suspicious_scan.md  INC-002_noisy_ids_rule.md  INC-003_tls_certificate_anomaly.md
labs/: 01_START_HERE.md
projects/: README.md
reports/: README.md
scripts/: analyze_suricata_eve_sample.py
tests/: 01_START_HERE.md  test_suricata_triage.py
(+28 files in other folders)
