[project]
name = "unibe-network-security-masters-lab"
version = "0.1.0"
description = "UNIBE master's-level network security curriculum and lab repository."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

